# test

./: README.md  build_triplet.py  check_ANSI-escape.py  check_TTY.py  config.py  download.py  download.toml  downloader.py  droidbuilder.toml  dxx.toml  main.py  manager.py  pyproject.toml  python_find.sh  terminal_size.py  triplet.py
.github/workflows/: build_apk.yml  check_path.yml  release_arm64.yml  terminal_size.yml  test.yml  test_any.yml  test_build-apk.yml  test_build.yml  test_file.yml
commands/: download.py
dxx/: builder.py  config.py  downloader.py  logger.py  main.py  manager.py  shell.py  triplet.py
dxx/commands/: __init__.py  build.py  check_triplet.py  clean.py  download.py
patches/: kivy-setup_py.patch
